--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
 
+  #facilitador de testes
+  mocktail: ^0.1.4
+
   #Firebase
   firebase_core: ^1.2.0
   #GoogleLogin
