--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_core: ^1.2.0
   #GoogleLogin
   google_sign_in: ^5.0.4
+  #Loading
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
