--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,15 @@ dependencies:
   shimmer: ^2.0.0
   #date format
   intl: ^0.17.0
+  #Gerencia de estado
+  mobx: ^2.0.4
+  flutter_mobx: ^2.0.2
+  mobx_codegen: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.2  
 
 flutter:
 
