--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
   #Firebase
   firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.10
   #GoogleLogin
   google_sign_in: ^5.2.4
   #Loading
