--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_mobx: ^2.0.2
   mobx_codegen: ^2.0.1
 
+  #Mascara de texto
+  flutter_masked_text2: ^0.9.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
