--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ dependencies:
   #Firebase
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
-  #GoogleLogin
+
+  #Login social
   google_sign_in: ^5.2.4
+  sign_in_with_apple: ^3.3.0
+
   #Loading
   shimmer: ^2.0.0
   #date format/localization
